src/test/ui/feature-gates/feature-gate-unwind-attributes.stderr
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
error[E0658]: `#[unwind]` is experimental
=======
error[E0658]: the `#[unwind]` attribute is an experimental feature
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)
  --> $DIR/feature-gate-unwind-attributes.rs:11:5
   |
LL |     #[unwind(allowed)]
   |     ^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/58760
   = help: add `#![feature(unwind_attributes)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
